--- a/index.html
+++ b/index.html
@@ -1,30 +1,80 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tea House</title>
     <!-- Google Font CDN -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap"
+      rel="stylesheet"
+    />
     <!-- Font Awesome CDN -->
-    <script src="https://kit.fontawesome.com/abe1885868.js" crossorigin="anonymous"></script>
+    <script
+      src="https://kit.fontawesome.com/abe1885868.js"
+      crossorigin="anonymous"
+    ></script>
     <!-- Tailwind CDN -->
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
-        tailwind.config = {
-          theme: {
-            extend: {
-              colors: {
-                clifford: '#da373d',
-              }
-            }
-          }
-        }
+      tailwind.config = {
+        theme: {
+          extend: {
+            colors: {
+              clifford: "#da373d",
+            },
+          },
+        },
+      };
     </script>
-</head>
-<body>
-    
-</body>
+  </head>
+  <body>
+    <!-- Main Content -->
+    <main class="max-w-screen-xl mx-auto">
+      <!-- Header Banner Content -->
+      <header class="flex flex-col md:flex-row gap-6 md:justify-between px-4 md:px-6 lg:px-8 py-8 md:pt-12">
+        <!-- Text Side -->
+        <div>
+          <h1 class="text-[#1C1C1C] text-5xl md:text-7xl font-bold">
+            It's good <br />
+            tea time at The <br />
+            Tea House
+          </h1>
+          <br />
+          <p class="text-[#777777]">
+            Tea and Botanical Solutions Supplier Give Optimum <br> Satisfaction To
+            Your Taste Buds.
+          </p>
+          <br />
+          <button
+            class="bg-gradient-to-r from-orange-500 to-red-600 text-white p-[1.125rem] text-2xl font-semibold rounded-lg"
+          >
+            Explore More
+            <i class="-rotate-45 text-2xl fa-solid fa-arrow-right"></i>
+          </button>
+        </div>
+        <!-- Image Side -->
+        <div class="relative">
+          <!-- Image-->
+          <div>
+            <img class="w-full" src="images/banner.png" alt="" />
+          </div>
+          <!-- Card Content -->
+          <div
+            class="box-border flex items-center absolute  top-[76%] left-[7%] md:top-[80%] md:left-[120px] p-4 md:py-4 md:px-6 bg-white shadow-md rounded-lg"
+          >
+            <i
+              class="mr-3 bg-gradient-to-r from-red-300 to-yellow-400 bg-clip-text text-transparent text-3xl md:text-4xl fa-solid fa-star"
+            ></i>
+            <div>
+              <h2 class="text-3xl md:text-3xl font-bold">5.00</h2>
+              <p class="md:text-lg font-semibold text-[#777777]">Trust Pilot Ratings</p>
+            </div>
+          </div>
+        </div>
+      </header>
+    </main>
+  </body>
 </html>
