--- a/index.html
+++ b/index.html
@@ -32,20 +32,22 @@
   </head>
   <body>
     <!-- Main Content -->
-    <main class="max-w-screen-xl mx-auto">
+    <main class="max-w-screen-xl mx-auto px-4 lg:p-0 md:px-8">
       <!-- Header Banner Content -->
-      <header class="flex flex-col md:flex-row gap-6 md:justify-between px-4 md:px-6 lg:px-8 py-8 md:pt-12">
+      <header
+        class="flex flex-col md:flex-row gap-6 md:justify-between py-12"
+      >
         <!-- Text Side -->
         <div>
-          <h1 class="text-[#1C1C1C] text-5xl md:text-7xl font-bold">
+          <h1 class="text-[#1C1C1C] text-5xl md:font-semibold lg:text-7xl lg:font-bold">
             It's good <br />
             tea time at The <br />
             Tea House
           </h1>
           <br />
           <p class="text-[#777777]">
-            Tea and Botanical Solutions Supplier Give Optimum <br> Satisfaction To
-            Your Taste Buds.
+            Tea and Botanical Solutions Supplier Give Optimum <br />
+            Satisfaction To Your Taste Buds.
           </p>
           <br />
           <button
@@ -63,18 +65,71 @@
           </div>
           <!-- Card Content -->
           <div
-            class="box-border flex items-center absolute  top-[76%] left-[7%] md:top-[80%] md:left-[120px] p-4 md:py-4 md:px-6 bg-white shadow-md rounded-lg"
+            class="box-border flex items-center absolute top-[76%] left-[7%] md:top-[75%] md:left-[80px] p-4 md:py-4 md:px-6 bg-white shadow-md rounded-lg"
           >
             <i
               class="mr-3 bg-gradient-to-r from-red-300 to-yellow-400 bg-clip-text text-transparent text-3xl md:text-4xl fa-solid fa-star"
             ></i>
             <div>
-              <h2 class="text-3xl md:text-3xl font-bold">5.00</h2>
-              <p class="md:text-lg font-semibold text-[#777777]">Trust Pilot Ratings</p>
+              <h2 class="text-2xl lg:text-3xl font-bold">5.00</h2>
+              <p class="lg:text-lg font-semibold text-[#777777]">
+                Trust Pilot Ratings
+              </p>
             </div>
           </div>
         </div>
       </header>
+      <!-- Products Section -->
+      <section class="my-12 mx-auto">
+        <!-- Title Section -->
+        <div class="text-center pb-12 md:w-3/4 mx-auto">
+          <h2 class="text-[30px] md:text-[45px] text-[#1C1C1C] font-bold mb-2">
+            Our Featured Products
+          </h2>
+          <p class="text-[#777777]">
+            There are many variations of passages of Lorem Ipsum available, but
+            the majority have suffered alteration in some form, by injected
+            humour, or randomised words which don't look even slightly
+            believable.
+          </p>
+        </div>
+
+        <!--Product Section -->
+        <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-6">
+          <!-- Product 01-->
+          <div class="flex flex-col items-center gap-10 rounded-lg p-8 bg-gradient-to-b from-gray-200 to-transparent">
+            <div><img class="w-full" src="images/tea-1.png" alt="" /></div>
+            <div class="text-center">
+              <h4 class="text-[25px] font-bold mb-2">Milk Tea</h4>
+              <p class="text-[#777777] text-lg font-semibold">Creamer could be replaced by fresh milk</p>
+            </div>
+          </div>
+          <!-- Product 02-->
+          <div class="flex flex-col items-center gap-10 rounded-lg p-8 bg-gradient-to-b from-gray-200 to-transparent">
+            <div><img class="w-full" src="images/tea-2.png" alt="" /></div>
+            <div class="text-center">
+              <h4 class="text-[25px] font-bold mb-2">Black Tea</h4>
+              <p class="text-[#777777] text-lg font-semibold">Creamer could be replaced by fresh milk</p>
+            </div>
+          </div>
+          <!-- Product 03-->
+          <div class="flex flex-col items-center gap-10 rounded-lg p-8 bg-gradient-to-b from-gray-200 to-transparent">
+            <div><img class="w-full" src="images/tea-3.png" alt="" /></div>
+            <div class="text-center">
+              <h4 class="text-[25px] font-bold mb-2">Lemon Tea</h4>
+              <p class="text-[#777777] text-lg font-semibold">Creamer could be replaced by fresh milk</p>
+            </div>
+          </div>
+          <!-- Product 04-->
+          <div class="flex flex-col items-center gap-10 rounded-lg p-8 bg-gradient-to-b from-gray-200 to-transparent">
+            <div><img class="w-full" src="images/tea-4.png" alt="" /></div>
+            <div class="text-center">
+              <h4 class="text-[25px] font-bold mb-2">Green Tea</h4>
+              <p class="text-[#777777] text-lg font-semibold">Creamer could be replaced by fresh milk</p>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
   </body>
 </html>
