--- a/index.html
+++ b/index.html
@@ -5,9 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tea House</title>
     <!-- Google Font CDN -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap"
+      rel="stylesheet"
+    />
     <!-- Font Awesome CDN -->
     <script
       src="https://kit.fontawesome.com/abe1885868.js"
@@ -26,9 +29,9 @@
         },
       };
     </script>
-     <style>
+    <style>
       * {
-        font-family: 'Manrope', sans-serif;
+        font-family: "Manrope", sans-serif;
       }
     </style>
   </head>
@@ -36,12 +39,12 @@
     <!-- Main Content -->
     <main class="max-w-screen-xl mx-auto px-4 lg:p-0 md:px-8">
       <!-- Header Banner Content -->
-      <header
-        class="flex flex-col md:flex-row gap-6 md:justify-between py-12"
-      >
+      <header class="flex flex-col md:flex-row gap-6 md:justify-between py-12">
         <!-- Text Side -->
         <div>
-          <h1 class="text-[#1C1C1C] text-5xl md:font-semibold lg:text-7xl lg:font-bold">
+          <h1
+            class="text-[#1C1C1C] text-5xl md:font-semibold lg:text-7xl lg:font-bold"
+          >
             It's good <br />
             tea time at The <br />
             Tea House
@@ -53,10 +56,10 @@
           </p>
           <br />
           <button
-            class="bg-gradient-to-r from-orange-500 to-red-600 text-white p-[1.125rem] text-2xl font-semibold rounded-lg"
+            class="bg-gradient-to-r from-orange-500 to-red-600 text-white p-[1.125rem] text-xl font-semibold rounded-xl"
           >
             Explore More
-            <i class="-rotate-45 text-2xl fa-solid fa-arrow-right"></i>
+            <img class="inline ml-2" src="images/arrow.png" alt="" />
           </button>
         </div>
         <!-- Image Side -->
@@ -99,45 +102,67 @@
         <!--Product Section -->
         <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-6">
           <!-- Product 01-->
-          <div class="flex flex-col items-center gap-10 rounded-lg p-8 bg-gradient-to-b from-gray-200 to-transparent">
+          <div
+            class="flex flex-col items-center gap-10 rounded-lg p-8 bg-gradient-to-b from-gray-200 to-transparent"
+          >
             <div><img class="w-full" src="images/tea-1.png" alt="" /></div>
             <div class="text-center">
               <h4 class="text-[25px] font-bold mb-2">Milk Tea</h4>
-              <p class="text-[#777777] text-lg font-semibold">Creamer could be replaced by fresh milk</p>
+              <p class="text-[#777777] text-lg font-semibold">
+                Creamer could be replaced by fresh milk
+              </p>
             </div>
           </div>
           <!-- Product 02-->
-          <div class="flex flex-col items-center gap-10 rounded-lg p-8 bg-gradient-to-b from-gray-200 to-transparent">
+          <div
+            class="flex flex-col items-center gap-10 rounded-lg p-8 bg-gradient-to-b from-gray-200 to-transparent"
+          >
             <div><img class="w-full" src="images/tea-2.png" alt="" /></div>
             <div class="text-center">
               <h4 class="text-[25px] font-bold mb-2">Black Tea</h4>
-              <p class="text-[#777777] text-lg font-semibold">Creamer could be replaced by fresh milk</p>
+              <p class="text-[#777777] text-lg font-semibold">
+                Creamer could be replaced by fresh milk
+              </p>
             </div>
           </div>
           <!-- Product 03-->
-          <div class="flex flex-col items-center gap-10 rounded-lg p-8 bg-gradient-to-b from-gray-200 to-transparent">
+          <div
+            class="flex flex-col items-center gap-10 rounded-lg p-8 bg-gradient-to-b from-gray-200 to-transparent"
+          >
             <div><img class="w-full" src="images/tea-3.png" alt="" /></div>
             <div class="text-center">
               <h4 class="text-[25px] font-bold mb-2">Lemon Tea</h4>
-              <p class="text-[#777777] text-lg font-semibold">Creamer could be replaced by fresh milk</p>
+              <p class="text-[#777777] text-lg font-semibold">
+                Creamer could be replaced by fresh milk
+              </p>
             </div>
           </div>
           <!-- Product 04-->
-          <div class="flex flex-col items-center gap-10 rounded-lg p-8 bg-gradient-to-b from-gray-200 to-transparent">
+          <div
+            class="flex flex-col items-center gap-10 rounded-lg p-8 bg-gradient-to-b from-gray-200 to-transparent"
+          >
             <div><img class="w-full" src="images/tea-4.png" alt="" /></div>
             <div class="text-center">
               <h4 class="text-[25px] font-bold mb-2">Green Tea</h4>
-              <p class="text-[#777777] text-lg font-semibold">Creamer could be replaced by fresh milk</p>
+              <p class="text-[#777777] text-lg font-semibold">
+                Creamer could be replaced by fresh milk
+              </p>
             </div>
           </div>
         </div>
       </section>
       <!-- Great Tea Section -->
-      <section class="grid grid-cols-1 lg:grid-cols-2 py-20">
+      <section
+        class="grid grid-cols-1 lg:grid-cols-2 gap-y-16 lg:gap-y-0 md:py-20 items-start max-w-7xl mx-auto"
+      >
         <!-- Grid BG Section -->
-        <div class="grid grid-cols-2 grid-rows-3 gap-4 lg:w-5/6">
+        <div
+          class="grid grid-cols-2 grid-rows-3 order-2 lg:order-1 gap-4 lg:w-5/6"
+        >
           <!-- First Grid -->
-          <div class="bg-gradient-to-r from-red-300 to-red-100 rounded-xl"></div>
+          <div
+            class="bg-gradient-to-r from-red-300 to-red-100 rounded-xl"
+          ></div>
           <!-- Second Image -->
           <div class="bg-[rgba(230,166,35,0.1)] rounded-xl row-span-2">
             <img class="my-5 mx-auto" src="images/fresh-1.png" alt="" />
@@ -152,22 +177,24 @@
           ></div>
         </div>
         <!-- Right Side Text Section -->
-        <div class="pr-10">
-          <h2 class="text-[45px] font-bold pb-5 text-[#1C1C1C] leading-[60px]">
+        <div class="order-1 lg:order-2 pr-10">
+          <h2
+            class="text-4xl md:text-[45px] font-extrabold md:font-bold pb-5 text-[#1C1C1C] leading-[60px]"
+          >
             Great Tea, Freshly Presented
           </h2>
           <p class="text-[#777777] pb-7">
-            The meaning of gong cha is chanese is to provide the best tea to emperor
-            from all possessions . It represents the highest quality and self
-            expectation. Establishing in 2006, Gong cha had been deeply appreciated by
-            its custoers because of good words of mouth and unique customized service
-            orginated from Taiwan.
+            The meaning of gong cha is chanese is to provide the best tea to
+            emperor from all possessions . It represents the highest quality and
+            self expectation. Establishing in 2006, Gong cha had been deeply
+            appreciated by its custoers because of good words of mouth and
+            unique customized service orginated from Taiwan.
           </p>
 
           <h4 class="text-[20px] font-bold pb-[10px]">Unique Taste</h4>
           <p class="text-[#777777] pb-5">
-            A Unique and different style from other teapots gives <br />a luxurious
-            and minimalist impression
+            A Unique and different style from other teapots gives <br />a
+            luxurious and minimalist impression
           </p>
 
           <h4 class="text-[20px] font-bold pb-[10px]">Premium Quality</h4>
@@ -177,8 +204,232 @@
           </p>
         </div>
       </section>
+      <!-- Review Section -->
+      <section
+        class="bg-gradient-to-r from-orange-500 to bg-[#D22C34] mb-28 rounded-xl grid grid-cols-1 lg:grid-cols-2 p-10 lg:p-20 md:px-16 mt-24 lg:mt-0 items-center"
+      >
+        <!-- Text Section -->
+        <div
+          class="flex flex-col gap-5 justify-center items-start text-white w-5/6"
+        >
+          <h2 class="text-3xl md:text-[45px] font-bold leading-tight">
+            Meet Our Super Clients
+          </h2>
+          <p>
+            There are many variations of passages of Lorem Ipsum available, but
+            the majority have suffered alteration in some form, by injected
+            humour, or randomised words which don't look even slightly
+            believable.
+          </p>
+          <button class="px-6 py-3 rounded-md bg-white">
+            <span
+              class="font-bold text-xl text-transparent bg-clip-text bg-gradient-to-r from-orange-500 to-[#D22C34]"
+              >Show All</span
+            >
+          </button>
+        </div>
 
-
+        <!-- Card Section Start-->
+        <div class="relative mt-24 lg:mt-0">
+          <!-- Top-Middle Card -->
+          <div class="absolute z-10 top-36 md:top-32 w-full">
+            <div
+              class="bg-white w-full md:w-3/4 h-56 rounded-lg relative px-7 md:px-12 flex items-center"
+            >
+              <!-- circle Image -->
+              <div
+                class="absolute rounded-full border-4 border-white -left-8 -top-5"
+              >
+                <img src="images/client.png" alt="" />
+              </div>
+              <!-- Text -->
+              <div class="">
+                <p class="text-[#777777] font-semibold mb-5">
+                  We are providing the best and suitable home insurance services
+                  for the people who are interested to treatment
+                </p>
+                <div>
+                  <h4 class="font-bold mb-1">Ilham Yahuda</h4>
+                  <p class="text-[#777777]">Businessman</p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- Bottom Cards -->
+          <div
+            class="flex flex-col gap-12 md:gap-10 items-end opacity-30 translate-x-16 md:translate-x-0"
+          >
+            <!-- Top Card -->
+            <div
+              class="bg-white w-full md:w-3/4 h-56 rounded-lg relative px-6 md:px-12 flex items-center"
+            >
+              <!-- circle Image -->
+              <div
+                class="absolute rounded-full border-4 border-white -left-8 -top-5"
+              >
+                <img src="images/client.png" alt="" />
+              </div>
+              <!-- Text -->
+              <div class="">
+                <p class="text-[#777777] font-semibold mb-5">
+                  We are providing the best and suitable home insurance services
+                  for the people who are interested to treatment
+                </p>
+                <div>
+                  <h4 class="font-bold mb-1">Ilham Yahuda</h4>
+                  <p class="text-[#777777]">Businessman</p>
+                </div>
+              </div>
+            </div>
+            <!-- Bottom Card -->
+            <div
+              class="bg-white w-full md:w-3/4 h-56 rounded-lg relative px-6 md:px-12 flex items-center"
+            >
+              <!-- circle Image -->
+              <div
+                class="absolute rounded-full border-4 border-white -left-8 -top-5"
+              >
+                <img src="images/client.png" alt="" />
+              </div>
+              <!-- Text -->
+              <div class="">
+                <p class="text-[#777777] font-semibold mb-5">
+                  We are providing the best and suitable home insurance services
+                  for the people who are interested to treatment
+                </p>
+                <div>
+                  <h4 class="font-bold mb-1">Ilham Yahuda</h4>
+                  <p class="text-[#777777]">Businessman</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- Events Section -->
+      <section class="mb-28">
+        <!-- Title Section -->
+        <div class="text-center pb-12 md:w-3/4 mx-auto">
+          <h2 class="text-[30px] md:text-[45px] text-[#1C1C1C] font-bold mb-2">
+            News & Events
+          </h2>
+          <p class="text-[#777777]">
+            There are many variations of passages of Lorem Ipsum available, but
+            the majority have suffered alteration in some form, by injected
+            humour, or randomised words which don't look even slightly
+            believable.
+          </p>
+        </div>
+        <!-- Card Section -->
+        <div class="grid grid-cols-1 md:grid-cols-3 gap-6">
+          <!-- Card 01 -->
+          <div class="p-5 rounded-lg border-2 border-gray-200">
+            <img class="w-full h-auto" src="images/news-1.png" alt="" />
+            <!-- Card Text -->
+            <div class="flex flex-col gap-3 mt-4">
+              <p class="text-[#777777]">Feb 05, 2027</p>
+              <h4 class="text-[#1c1c1c] text-2xl font-bold">
+                Collecting 8 points for discount
+              </h4>
+              <p class="text-[#777777]">
+                There are many variations of passages of Lorem Ipsum available.
+              </p>
+              <p class="text-[#1c1c1c] font-bold">Learn More</p>
+            </div>
+          </div>
+          <!-- Card 02 -->
+          <div class="p-5 rounded-lg border-2 border-gray-200">
+            <img class="w-full h-auto" src="images/news-1.png" alt="" />
+            <!-- Card Text -->
+            <div class="flex flex-col gap-3 mt-4">
+              <p class="text-[#777777]">Feb 05, 2027</p>
+              <h4 class="text-[#1c1c1c] text-2xl font-bold">
+                Collecting 8 points for discount
+              </h4>
+              <p class="text-[#777777]">
+                There are many variations of passages of Lorem Ipsum available.
+              </p>
+              <p class="text-[#1c1c1c] font-bold">Learn More</p>
+            </div>
+          </div>
+          <!-- Card 03 -->
+          <div class="p-5 rounded-lg border-2 border-gray-200">
+            <img class="w-full h-auto" src="images/news-1.png" alt="" />
+            <!-- Card Text -->
+            <div class="flex flex-col gap-3 mt-4">
+              <p class="text-[#777777]">Feb 05, 2027</p>
+              <h4 class="text-[#1c1c1c] text-2xl font-bold">
+                Collecting 8 points for discount
+              </h4>
+              <p class="text-[#777777]">
+                There are many variations of passages of Lorem Ipsum available.
+              </p>
+              <p class="text-[#1c1c1c] font-bold">Learn More</p>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
+    <footer class="bg-gradient-to-r from-orange-100 to-pink-100 py-12 md:py-20">
+      <div class="max-w-screen-xl mx-auto px-4 md:px-0">
+      <!-- Logo and Button -->
+        <div class="flex justify-between flex-col md:flex-row gap-4 md:gap-0 mb-12 md:mb-20">
+          <div>
+            <img src="images/cup.png" alt="" />
+          </div>
+          <div class="flex items-center gap-10 md:pr-16">
+            <p class="text-[#494949] text-lg md:text-xl">Ready to get strated?</p>
+            <button
+              class="bg-gradient-to-r from-orange-500 to-red-600 text-white px-4 md:px-8 py-4 text-xl font-semibold rounded-lg"
+            >
+              Get Started
+            </button>
+          </div>
+        </div>
+        <!-- Footer Text Container -->
+        <div class="grid grid-cols-2 lg:grid-cols-4 gap-12 md:gap-0">
+          <!-- Quik Links -->
+          <div class="flex flex-col gap-3 text-[#494949]">
+            <h4 class="text-[#1c1c1c] text-lg font-bold">Quik Links</h4>
+            <p>Home</p>
+            <p>About Us</p>
+            <p>Insurance</p>
+            <p>Privacy Policy</p>
+          </div>
+          <!-- Services Links -->
+          <div class="flex flex-col gap-3 text-[#494949]">
+            <h4 class="text-[#1c1c1c] text-lg font-bold">Our Service</h4>
+            <p>Life Insurance</p>
+            <p>Car Insurance</p>
+            <p>Health Insurance</p>
+            <p>House Insurance</p>
+          </div>
+          <!-- Help Links -->
+          <div class="flex flex-col gap-3 text-[#494949]">
+            <h4 class="text-[#1c1c1c] text-lg font-bold">Help</h4>
+            <p>Contact Us</p>
+            <p>FAQs</p>
+          </div>
+          <!-- News Later -->
+          <div class="flex flex-col gap-3 -ml-12 text-[#494949]">
+            <h4 class="text-[#1c1c1c] text-[24px] font-bold">Subscribe to our newsletter</h4>
+            <div>
+              <input class="w-5/6 bg-transparent border-b-[1px] border-[#1c1c1c] py-4" type="email" placeholder="Email Address">
+              <i class="bg-gradient-to-r from-orange-500 to-red-600 inline-flex items-center justify-center text-white rounded-full w-7 h-7 text-xs fa-solid fa-chevron-right"></i>
+            </div>
+            <!-- icons -->
+            <di class="mt-4 w-2/4 md:w-1/4 flex justify-between items-center">
+              <i class="fa-brands fa-facebook-f"></i>
+              <i class="fa-brands fa-twitter"></i>
+              <i class="fa-brands fa-square-instagram"></i>    
+            </div>
+          </div>
+        </div>
+      <!-- Last Text -->
+       <div class="pt-20">
+        <p class="text-center">© 2027 UIDesign.to - All rights reserved.</p>
+       </div>
+      </div>
+    </footer>
   </body>
 </html>
