--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@
       * {
         font-family: "Manrope", sans-serif;
       }
+      html, body {
+        overflow-x: hidden;
+      }
     </style>
   </head>
   <body>
@@ -153,7 +156,7 @@
       </section>
       <!-- Great Tea Section -->
       <section
-        class="grid grid-cols-1 lg:grid-cols-2 gap-y-16 lg:gap-y-0 md:py-20 items-start max-w-7xl mx-auto"
+        class="grid grid-cols-1 lg:grid-cols-2 gap-y-16 lg:gap-y-0 md:py-20 items-start max-w-7xl px-4 md:px-0 mx-auto"
       >
         <!-- Grid BG Section -->
         <div
@@ -411,14 +414,14 @@
             <p>FAQs</p>
           </div>
           <!-- News Later -->
-          <div class="flex flex-col gap-3 -ml-12 text-[#494949]">
+          <div class="flex flex-col gap-3 col-span-2 text-[#494949]">
             <h4 class="text-[#1c1c1c] text-[24px] font-bold">Subscribe to our newsletter</h4>
             <div>
               <input class="w-5/6 bg-transparent border-b-[1px] border-[#1c1c1c] py-4" type="email" placeholder="Email Address">
               <i class="bg-gradient-to-r from-orange-500 to-red-600 inline-flex items-center justify-center text-white rounded-full w-7 h-7 text-xs fa-solid fa-chevron-right"></i>
             </div>
             <!-- icons -->
-            <di class="mt-4 w-2/4 md:w-1/4 flex justify-between items-center">
+            <di class="mt-8 md:mt-4 w-1/4 md:w-1/4 flex justify-between items-center">
               <i class="fa-brands fa-facebook-f"></i>
               <i class="fa-brands fa-twitter"></i>
               <i class="fa-brands fa-square-instagram"></i>    
