--- a/index.html
+++ b/index.html
@@ -376,14 +376,14 @@
     <footer class="bg-gradient-to-r from-orange-100 to-pink-100 py-12 md:py-20">
       <div class="max-w-screen-xl mx-auto px-4 md:px-0">
       <!-- Logo and Button -->
-        <div class="flex justify-between flex-col md:flex-row gap-4 md:gap-0 mb-12 md:mb-20">
+        <div class="flex flex-col justify-between md:flex-row gap-4 md:gap-0 mb-12 md:mb-20">
           <div>
             <img src="images/cup.png" alt="" />
           </div>
           <div class="flex items-center gap-10 md:pr-16">
             <p class="text-[#494949] text-lg md:text-xl">Ready to get strated?</p>
             <button
-              class="bg-gradient-to-r from-orange-500 to-red-600 text-white px-4 md:px-8 py-4 text-xl font-semibold rounded-lg"
+              class="bg-gradient-to-r from-orange-500 to-red-600 text-white px-3 md:px-8 py-4 text-xl font-semibold rounded-lg"
             >
               Get Started
             </button>
@@ -414,14 +414,14 @@
             <p>FAQs</p>
           </div>
           <!-- News Later -->
-          <div class="flex flex-col gap-3 col-span-2 text-[#494949]">
+          <div class="flex flex-col gap-3 col-span-2 md:col-span-1 text-[#494949]">
             <h4 class="text-[#1c1c1c] text-[24px] font-bold">Subscribe to our newsletter</h4>
             <div>
               <input class="w-5/6 bg-transparent border-b-[1px] border-[#1c1c1c] py-4" type="email" placeholder="Email Address">
               <i class="bg-gradient-to-r from-orange-500 to-red-600 inline-flex items-center justify-center text-white rounded-full w-7 h-7 text-xs fa-solid fa-chevron-right"></i>
             </div>
             <!-- icons -->
-            <di class="mt-8 md:mt-4 w-1/4 md:w-1/4 flex justify-between items-center">
+            <div class="mt-8 md:mt-4 w-1/4 md:w-1/4 flex justify-between items-center">
               <i class="fa-brands fa-facebook-f"></i>
               <i class="fa-brands fa-twitter"></i>
               <i class="fa-brands fa-square-instagram"></i>    
