--- a/index.html
+++ b/index.html
@@ -25,20 +25,20 @@
             colors: {
               clifford: "#da373d",
             },
+            fontFamily: {
+              manrope: ['Manrope', 'sans-serif'],
+            },
           },
         },
       };
     </script>
     <style>
-      * {
-        font-family: "Manrope", sans-serif;
-      }
       html, body {
         overflow-x: hidden;
       }
     </style>
   </head>
-  <body>
+  <body class="font-manrope">
     <!-- Main Content -->
     <main class="max-w-screen-xl mx-auto px-4 lg:p-0 md:px-8">
       <!-- Header Banner Content -->
@@ -209,7 +209,7 @@
       </section>
       <!-- Review Section -->
       <section
-        class="bg-gradient-to-r from-orange-500 to bg-[#D22C34] mb-28 rounded-xl grid grid-cols-1 lg:grid-cols-2 p-10 lg:p-20 md:px-16 mt-24 lg:mt-0 items-center"
+        class="bg-gradient-to-r from-orange-500 to bg-[#D22C34] mb-28 rounded-xl grid grid-cols-1 lg:grid-cols-2 p-10 lg:p-20 md:px-16 mt-24 items-center"
       >
         <!-- Text Section -->
         <div
@@ -254,6 +254,7 @@
                 <div>
                   <h4 class="font-bold mb-1">Ilham Yahuda</h4>
                   <p class="text-[#777777]">Businessman</p>
+                  <img class="ml-80" src="images/circles.png" alt="">
                 </div>
               </div>
             </div>
@@ -342,7 +343,7 @@
           </div>
           <!-- Card 02 -->
           <div class="p-5 rounded-lg border-2 border-gray-200">
-            <img class="w-full h-auto" src="images/news-1.png" alt="" />
+            <img class="w-full h-auto" src="images/news-2.png" alt="" />
             <!-- Card Text -->
             <div class="flex flex-col gap-3 mt-4">
               <p class="text-[#777777]">Feb 05, 2027</p>
@@ -357,7 +358,7 @@
           </div>
           <!-- Card 03 -->
           <div class="p-5 rounded-lg border-2 border-gray-200">
-            <img class="w-full h-auto" src="images/news-1.png" alt="" />
+            <img class="w-full h-auto" src="images/news-3.png" alt="" />
             <!-- Card Text -->
             <div class="flex flex-col gap-3 mt-4">
               <p class="text-[#777777]">Feb 05, 2027</p>
